--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g default-terminal "screen-256color"
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
-bind S run-shell 'tmux new-window  "tmux set status off; bash $HOME/bin/screensaver.sh; tmux set status on"' 
+bind S run-shell 'tmux new-window  "tmux set status off; bash $HOME/dotfiles/screensaver.sh; tmux set status on"' 
 
 # unbind C-b
 # set -g prefix C-a
