--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -s escape-time 50
 set -g set-titles on
 set -g set-titles-string "#S"
 
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-keys vi
 set -g status-interval 1
 set -g status-attr bright
