fix tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ set -s escape-time 50
 set -g set-titles on
 set -g set-titles-string "#S"
 
+set-window-option -g xterm-keys on
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+
 # set -g status-utf8 on
 set -g status-keys vi
 set -g status-interval 1
