--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g default-terminal "screen-256color"
 
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
-bind S run-shell 'tmux new-window  "tmux set status off; bash $HOME/dotfiles/screensaver.sh; tmux set status on"' 
+bind S run-shell 'tmux new-window  "tmux set status off; bash $HOME/dotfiles/screensaver.sh; tmux set status on"'
 
 # unbind C-b
 # set -g prefix C-a
@@ -39,7 +39,7 @@ set -g set-titles on
 set -g set-titles-string "#S"
 
 set-window-option -g xterm-keys on
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind -t vi-copy y copy-pipe 'xclip -selection c'
 
 # set -g status-utf8 on
 set -g status-keys vi
@@ -54,5 +54,3 @@ set -g status-right '#[fg=green][%H:%M|%d.%m.%Y]#[default]'
 #setw -g window-status-current-format '#[fg=yellow](#I.#P#F#W)#[default]'
 setw -g window-status-current-format '#[fg=yellow]#W#[default]'
 setw -g window-status-format '#I#F#W'
-
-
