upgrading font awesome broke polybar. Also, made it a bit more space-efficient

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -8,10 +8,8 @@
 ;=====================================================
 
 [colors]
-;background = ${xrdb:color0:#222}
 background = #222
 background-alt = #444
-;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #999
 primary = #display
@@ -21,22 +19,22 @@ alert = #bd2c40
 [bar/gambit]
 monitor = ${env:MONITOR:HDMI-0}
 width = 100%
-height = 32
+height = 28
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 4.0
+radius = 0.0
 fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 2
 line-color = #f00
 
-border-size = 5
+border-size = 0
 border-color = #00000000
 
-padding-left = 0
+padding-left = 2
 padding-right = 2
 
 module-margin-left = 1
@@ -46,9 +44,10 @@ module-margin-right = 2
 ; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 
 font-0 = "Bitstream Vera Sans:size=10;0"
-font-1 = "FontAwesome:size=12;0"
-font-2 = "TakaoGothic:weight=bold:size=12;0"
-font-3 = "OpenSansEmoji:size=12;0"
+font-1 = "Font Awesome 5 Free:style=Regular:size=12;0"
+font-2 = "Font Awesome 5 Free:style=Solid:size=12;0"
+font-3 = "TakaoGothic:weight=bold:size=12;0"
+font-4 = "OpenSansEmoji:size=12;0"
 
 
 modules-left = bspwm i3
@@ -128,10 +127,10 @@ label-empty-padding = 2
 
 [module/i3]
 type = internal/i3
-label-focused-font = 2
-label-unfocused-font = 2
-label-urgent-font = 2
-label-visible-font = 2
+label-focused-font = 1
+label-unfocused-font = 1
+label-urgent-font = 1
+label-visible-font = 1
 format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
@@ -145,30 +144,23 @@ label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused =  %icon% %index% %name%
+label-focused = %index%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused =  %icon% %index% %name%
+label-unfocused = %index%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible =  %icon% %index% %name%
+label-visible = %index%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
-ws-icon-0 = "1:www;"
-ws-icon-1 = "2:code;"
-ws-icon-2 = "3:other;"
-ws-icon-3 = "4:music;"
-ws-icon-4 = "8:social;"
-ws-icon-default = 
-
 ; urgent = Workspace with urgency hint set
-label-urgent =  %icon% %index% %name%
+label-urgent = %name%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
@@ -189,19 +181,15 @@ label-song-ellipsis = true
 [module/xbacklight]
 type = internal/xbacklight
 
-format = <label> <bar>
-label = BL
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
+format = <ramp> <label>
+label = %percentage%%
+ramp-foreground = ${colors.foreground-alt}
+ramp-font = 3
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 
 [module/backlight-acpi]
 inherit = module/xbacklight
@@ -211,7 +199,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 ; format-underline = #f90000
 label = %percentage:2%%
@@ -224,43 +212,43 @@ format-prefix-foreground = ${colors.foreground-alt}
 ; format-underline = #4bffdc
 label = %percentage_used%%
 
-; [module/wlan]
-; type = internal/network
-; interface = net1
-; interval = 3.0
-;
-; format-connected = <ramp-signal> <label-connected>
-; format-connected-underline = #9f78e1
-; label-connected = %essid%
-;
-; format-disconnected =
-; ;format-disconnected = <label-disconnected>
-; ;format-disconnected-underline = ${self.format-connected-underline}
-; ;label-disconnected = %ifname% disconnected
-; ;label-disconnected-foreground = ${colors.foreground-alt}
-;
-; ramp-signal-0 = 
-; ramp-signal-1 = 
-; ramp-signal-2 = 
-; ramp-signal-3 = 
-; ramp-signal-4 = 
-; ramp-signal-foreground = ${colors.foreground-alt}
-;
-; [module/eth]
-; type = internal/network
-; interface = eno1
-; interval = 3.0
-;
-; format-connected-underline = #55aa55
-; format-connected-prefix = " "
-; format-connected-prefix-foreground = ${colors.foreground-alt}
-; label-connected = %local_ip%
-;
-; format-disconnected =
-; ;format-disconnected = <label-disconnected>
-; ;format-disconnected-underline = ${self.format-connected-underline}
-; ;label-disconnected = %ifname% disconnected
-; ;label-disconnected-foreground = ${colors.foreground-alt}
+[module/wlan]
+type = internal/network
+interface = wlp3s0
+interval = 3.0
+
+format-connected = <ramp-signal> <label-connected>
+format-connected-underline = #9f78e1
+label-connected = %essid%
+
+format-disconnected =
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
+
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.foreground-alt}
+
+[module/eth]
+type = internal/network
+interface = eno1
+interval = 3.0
+
+format-connected-underline = #55aa55
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colors.foreground-alt}
+label-connected = %local_ip%
+
+format-disconnected =
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
@@ -285,11 +273,11 @@ format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted-font = 4
+label-muted-font = 1
 label-muted = 🔇 muted
 format-muted-foreground = ${colors.foreground-alt}
 
-ramp-volume-font = 4
+ramp-volume-font = 1
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
@@ -306,13 +294,14 @@ label-charging = 
 format-charging-underline = #ffb52a
 
 format-discharging = <ramp-capacity> <label-discharging>
-label-discharging = %percentage%/consumption
+label-discharging = %percentage%%
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = ""
 format-full-prefix-foreground = ${colors.foreground-alt}
 ; format-full-underline = ${self.format-charging-underline}
 
+ramp-capacity-font = 1
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -358,7 +347,7 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open = 
 label-open-foreground = ${colors.secondary}
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
