--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -160,7 +160,7 @@ label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %name%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
@@ -240,7 +240,7 @@ interface = eno1
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -274,7 +274,7 @@ label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted-font = 1
-label-muted = 🔇 muted
+label-muted =  muted
 format-muted-foreground = ${colors.foreground-alt}
 
 ramp-volume-font = 1
