--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,8 +179,8 @@ bindsym $mod+Print exec "scrot -se 'mv $f ~/Screenshots; xclip -i -selection cli
 bindsym Mod1+Control+l exec --no-startup-id bash ~/bin/lock
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Media player controls
@@ -189,10 +189,10 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-exec --no-startup-id bash ~/.screenlayout/gambit.sh
+exec --no-startup-id bash ~/.screenlayout/gambit.sh # Work
 exec --no-startup-id compton -b
 exec --no-startup-id nm-applet --sm-disable
-exec --no-startup-id killall notify-osd
+exec --no-startup-id killall notify-osd # Work (Ubuntu)
 exec --no-startup-id dunst
 exec --no-startup-id launch-polybar
 exec --no-startup-id set-backgrounds
@@ -206,6 +206,6 @@ new_window pixel
 new_float normal
 
 # Gaps
-gaps inner 5
+# gaps inner 5
 bindsym $mod+KP_Add gaps inner all plus 2
 bindsym $mod+KP_Subtract gaps inner all minus 2
