commit i3 config changes

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -177,7 +177,7 @@ bindsym $mod+r mode "resize"
 bindsym Print exec "scrot -e 'mv $f ~/Screenshots'"
 bindsym $mod+Print exec "scrot -se 'mv $f ~/Screenshots; xclip -i -selection clipboard -t image/png ~/Screenshots/$f'"
 
-bindsym Mod1+Control+l exec --no-startup-id bash ~/bin/lock
+bindsym Mod1+Control+l exec --no-startup-id xscreensaver-command -lock
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
@@ -197,7 +197,12 @@ exec --no-startup-id killall notify-osd # Work (Ubuntu)
 exec --no-startup-id dunst
 exec --no-startup-id launch-polybar
 exec --no-startup-id set-backgrounds
-exec_always --no-startup-id setxkbmap -option compose:menu
+
+exec --no-startup-id setxkbmap -layout gb
+exec --no-startuo-id setxkbmap -option caps:escape -option compose:menu
+
+exec --no-startup-id redshift -Pr
+bindsym $mod+x exec killall --signal USR1 redshift
 
 # assign [class="Atom"] $workspace2
 assign [class="Spotify"] $workspace4
@@ -210,3 +215,9 @@ new_float normal
 # gaps inner 5
 bindsym $mod+KP_Add gaps inner all plus 2
 bindsym $mod+KP_Subtract gaps inner all minus 2
+
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
