Revert "[work changes]"
This reverts commit 1ffd573198525aa7e92bb090f368fffd04c94cf9.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -191,8 +191,8 @@ bindsym XF86AudioPrev exec playerctl previous
 
 exec --no-startup-id compton -b
 exec --no-startup-id nm-applet --sm-disable
-exec --no-startup-id killall notify-osd # Work (Ubuntu)
-exec --no-startup-id dunst -fn "Monospace 18"
+exec --no-startup-id killall notify-osd
+exec --no-startup-id dunst
 exec --no-startup-id launch-polybar
 exec --no-startup-id set-backgrounds
 exec --no-startup-id synergys --daemon -c ~/synergy.conf --enable-crypto
