--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,8 +40,8 @@ bindsym $mod+Shift+Return exec finder
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run
-bindsym $mod+grave exec rofi -show window
+bindsym $mod+d exec rofi -theme mytheme -show run
+bindsym $mod+grave exec rofi -theme mytheme -show window
 bindsym $mod+g exec googlies
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -216,4 +216,4 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
-bindsym $mod+F2 exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -p ".desktop: "'
+bindsym $mod+F2 exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -theme mytheme -dmenu -p ".desktop: "'
