--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,8 +30,7 @@ font pango:SFNS Display 8
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec urxvt
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec wezterm
 
 # start a file browser
 bindsym $mod+Shift+Return exec finder
@@ -156,12 +155,13 @@ bindsym $mod+r mode "resize"
 
 # # Start i3bar to display a workspace bar (plus the system information i3status
 # # finds out, if available)
-# bar {
-#        status_command i3status
-# }
+bar {
+        position top
+        status_command i3status
+}
 
-bindsym Print exec "scrot -e 'mv $f ~/Screenshots'"
-bindsym $mod+Print exec "scrot -se 'mv $f ~/Screenshots; xclip -i -selection clipboard -t image/png ~/Screenshots/$f'"
+bindsym Print exec --no-startup-id falmeshot screen
+bindsym $mod+Shift+s exec --no-startup-id flameshot gui
 
 bindsym Mod1+Control+l exec --no-startup-id xscreensaver-command -lock
 
@@ -176,13 +176,9 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-# exec --no-startup-id compton -b --backend glx --blur-background --blur-method kawase
 exec --no-startup-id nm-applet --sm-disable
-exec --no-startup-id launch-polybar
-exec --no-startup-id set-backgrounds
 
-exec --no-startup-id setxkbmap -layout gb
-exec --no-startuo-id setxkbmap -option caps:escape -option compose:menu
+exec --no-startup-id "sleep 2; setxkbmap -layout gb -option caps:escape -option compose:menu"
 
 exec --no-startup-id redshift -Pr
 bindsym $mod+x exec killall --signal USR1 redshift
